# ma-aa-tp-p6

./: .gitignore  CMakeLists.txt  README.md  makefile
.github/workflows/: action.yml
scripts/: clean.sh  run.sh
src/: diviser_pour_regner.c  methodes_gloytonnes.c  programmation_dynamique.c
